Bug 1923168 - [part 2] standardize skip-if conditions for devtools. r=devtools-reviewers,ochameau
Differential Revision: https://phabricator.services.mozilla.com/D225167

UltraBlame original commit: d0f966d263ded61bd54c5c1c268bc41c3adfd499

--- a/devtools/client/debugger/test/mochitest/browser_aj.toml
+++ b/devtools/client/debugger/test/mochitest/browser_aj.toml
@@ -727,23 +727,89 @@ linux
 '
 &
 &
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
 "
 #
 Bug
 1750199
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 tsan
 "
 #
 Bug
 1750199
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -910,9 +976,6 @@ os
 '
 win
 '
-&
-&
-fission
 &
 &
 debug
@@ -1778,28 +1841,6 @@ and
 /
 or
 labeled
-skip
--
-if
-=
-[
-"
-!
-fission
-"
-]
-#
-threads
-panel
-only
-shows
-remote
-frame
-when
-fission
-is
-enabled
-.
 [
 "
 browser_dbg
@@ -1905,18 +1946,47 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1767701
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
