--- a/devtools/client/debugger/test/mochitest/browser_kz.toml
+++ b/devtools/client/debugger/test/mochitest/browser_kz.toml
@@ -342,6 +342,24 @@ linux
 '
 &
 &
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 asan
 "
 #
@@ -557,18 +575,18 @@ if
 =
 [
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 mac
 '
+&
+&
+debug
+&
+&
+verify
 "
 #
 Bug
@@ -582,13 +600,22 @@ linux
 '
 &
 &
-debug
-&
-&
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -599,6 +626,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -650,6 +695,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -660,6 +723,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -1276,6 +1357,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
 os
@@ -1286,8 +1385,25 @@ mac
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 [
@@ -1367,10 +1483,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -1409,6 +1537,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -1460,17 +1606,62 @@ linux
 '
 &
 &
-(
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
-|
-|
-tsan
-)
 "
-]
 #
 Bug
 1835255
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+tsan
+"
+#
+Bug
+1835255
+]
 [
 "
 browser_dbg
@@ -1949,18 +2140,18 @@ debug
 tsan
 "
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 linux
 '
+&
+&
+debug
+&
+&
+verify
 "
 "
 a11y_checks
@@ -2040,6 +2231,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -2348,15 +2557,15 @@ if
 debug
 "
 "
-verify
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+verify
 "
 ]
 [
@@ -2537,6 +2746,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -2545,8 +2772,7 @@ Bug
 win11_2009
 &
 &
-!
-debug
+opt
 "
 #
 Bug
@@ -2577,6 +2803,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -2588,8 +2832,7 @@ Bug
 win11_2009
 &
 &
-!
-debug
+opt
 "
 #
 Bug
