--- a/devtools/client/inspector/computed/test/browser.toml
+++ b/devtools/client/inspector/computed/test/browser.toml
@@ -263,21 +263,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
-"
-#
-Bug
-1559033
-"
-apple_silicon
+os_version
+=
+=
+'
+10
+.
+15
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
