--- a/devtools/client/inspector/grids/test/browser.toml
+++ b/devtools/client/inspector/grids/test/browser.toml
@@ -293,25 +293,26 @@ if
 =
 [
 "
-verify
-&
-&
-(
 os
 =
 =
 '
 win
 '
-|
-|
+&
+&
+verify
+"
+"
 os
 =
 =
 '
 linux
 '
-)
+&
+&
+verify
 "
 ]
 [
@@ -551,6 +552,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
 os
@@ -558,6 +577,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 "
@@ -569,12 +606,21 @@ win
 '
 &
 &
-(
 debug
-|
-|
+"
+#
+Bug
+1557181
+"
+os
+=
+=
+'
+win
+'
+&
+&
 asan
-)
 "
 #
 Bug
@@ -599,15 +645,15 @@ if
 =
 [
 "
-verify
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+verify
 "
 ]
 [
