--- a/devtools/client/inspector/markup/test/browser.toml
+++ b/devtools/client/inspector/markup/test/browser.toml
@@ -599,14 +599,14 @@ browser_markup_accessibility_focus_blur
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-=
+!
 =
 '
 mac
@@ -642,14 +642,14 @@ browser_markup_accessibility_navigation
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-=
+!
 =
 '
 mac
@@ -685,14 +685,14 @@ browser_markup_accessibility_navigation_after_edit
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-=
+!
 =
 '
 mac
