--- a/devtools/client/inspector/rules/test/browser_part1.toml
+++ b/devtools/client/inspector/rules/test/browser_part1.toml
@@ -262,18 +262,18 @@ if
 =
 [
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+debug
+&
+&
+verify
 "
 ]
 [
@@ -515,14 +515,44 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1559315
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -632,8 +662,7 @@ win
 '
 &
 &
-!
-debug
+opt
 "
 ]
 #
@@ -912,19 +941,18 @@ if
 =
 [
 "
-verify
-&
-&
-!
-debug
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+opt
+&
+&
+verify
 "
 ]
 [
@@ -1370,18 +1398,18 @@ if
 =
 [
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+debug
+&
+&
+verify
 "
 ]
 [
@@ -1577,6 +1605,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
@@ -1987,16 +2033,6 @@ js
 browser_rules_variables_autocomplete
 .
 js
-"
-]
-skip
--
-if
-=
-[
-"
-!
-fission
 "
 ]
 [
