--- a/devtools/client/inspector/test/browser.toml
+++ b/devtools/client/inspector/test/browser.toml
@@ -464,14 +464,14 @@ browser_inspector_breadcrumbs_keyboard_trap
 js
 "
 ]
-skip
+run
 -
 if
 =
 [
 "
 os
-=
+!
 =
 '
 mac
@@ -870,6 +870,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -880,6 +898,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -1450,8 +1486,7 @@ win
 '
 &
 &
-!
-debug
+opt
 "
 ]
 #
@@ -2293,11 +2328,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
