--- a/devtools/client/netmonitor/src/har/test/browser.toml
+++ b/devtools/client/netmonitor/src/har/test/browser.toml
@@ -168,21 +168,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
-"
-#
-Bug
-1622925
-"
-apple_silicon
+os_version
+=
+=
+'
+10
+.
+15
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -206,8 +218,15 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
