--- a/devtools/client/netmonitor/test/browser.toml
+++ b/devtools/client/netmonitor/test/browser.toml
@@ -1119,6 +1119,14 @@ os_version
 .
 04
 '
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
 win11_2009
@@ -1139,16 +1147,30 @@ debug
 Bug
 1603355
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-debug
-"
-#
-Bug
-1603355
-"
-apple_silicon
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -1444,18 +1466,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
-"
-"
-apple_silicon
+os_version
+=
+=
+'
+10
+.
+15
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 [
@@ -1534,24 +1571,33 @@ win11_2009
 Bug
 1797751
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
 &
 &
-verify
-"
-#
-bug
-1328915
-"
-apple_silicon
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-debug
+opt
 &
 &
 verify
@@ -2613,8 +2659,15 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 &
 &
 a11y_checks
@@ -2698,6 +2751,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -2893,8 +2954,15 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 &
 &
 verify
