--- a/devtools/client/webconsole/test/browser/_browser_console.toml
+++ b/devtools/client/webconsole/test/browser/_browser_console.toml
@@ -495,6 +495,24 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -505,6 +523,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -573,8 +609,7 @@ bits
 64
 &
 &
-!
-debug
+opt
 "
 #
 Bug
