--- a/devtools/client/webconsole/test/browser/_jsterm.toml
+++ b/devtools/client/webconsole/test/browser/_jsterm.toml
@@ -369,27 +369,6 @@ names
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-win11_2009
-&
-&
-debug
-&
-&
-bits
-=
-=
-32
-"
-]
-#
-Bug
-1620856
 [
 "
 browser_jsterm_autocomplete_accept_no_scroll
@@ -411,27 +390,6 @@ browser_jsterm_autocomplete_arrow_keys
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-win11_2009
-&
-&
-debug
-&
-&
-bits
-=
-=
-32
-"
-]
-#
-Bug
-1620856
 [
 "
 browser_jsterm_autocomplete_await
@@ -1359,14 +1317,25 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
