--- a/devtools/client/webconsole/test/browser/_webconsole.toml
+++ b/devtools/client/webconsole/test/browser/_webconsole.toml
@@ -2666,7 +2666,30 @@ linux
 Bug
 1767724
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -2811,6 +2834,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 bug
@@ -2874,7 +2915,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
@@ -2939,7 +3003,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
@@ -3277,31 +3364,65 @@ if
 =
 [
 "
-!
-debug
-&
-&
 os
 =
 =
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1598205
 "
-!
-debug
-&
-&
 os
 =
 =
 '
 win
 '
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -3883,6 +4004,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -4080,7 +4219,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
