--- a/devtools/shared/commands/resource/tests/browser.toml
+++ b/devtools/shared/commands/resource/tests/browser.toml
@@ -300,16 +300,6 @@ browser_resources_css_registered_properties
 js
 "
 ]
-skip
--
-if
-=
-[
-"
-!
-fission
-"
-]
 [
 "
 browser_resources_document_events
@@ -331,10 +321,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -466,10 +468,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -481,7 +495,30 @@ win11_2009
 Bug
 1767772
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
