Bug 1917885 - [Outreachy] Ship Uint8Array to/from base64 and hex;  r=dminor
Differential Revision: https://phabricator.services.mozilla.com/D225089

UltraBlame original commit: 725fc4cc10e74dd232158688aa0dc3f9293ae9be

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -49910,6 +49910,39 @@ set_spidermonkey_pref
 :
 startup
 #
+Experimental
+support
+for
+Uint8Array
+base64
+/
+hex
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+uint8array_base64
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
 ifdef
 NIGHTLY_BUILD
 #
@@ -49965,39 +49998,6 @@ options
 experimental
 .
 symbols_as_weakmap_keys
-type
-:
-bool
-value
-:
-false
-mirror
-:
-always
-set_spidermonkey_pref
-:
-startup
-#
-Experimental
-support
-for
-Uint8Array
-base64
-/
-hex
-in
-JavaScript
-.
--
-name
-:
-javascript
-.
-options
-.
-experimental
-.
-uint8array_base64
 type
 :
 bool
