--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -49910,39 +49910,6 @@ set_spidermonkey_pref
 :
 startup
 #
-Experimental
-support
-for
-Uint8Array
-base64
-/
-hex
-in
-JavaScript
-.
--
-name
-:
-javascript
-.
-options
-.
-experimental
-.
-uint8array_base64
-type
-:
-bool
-value
-:
-true
-mirror
-:
-always
-set_spidermonkey_pref
-:
-startup
-#
 ifdef
 NIGHTLY_BUILD
 #
@@ -49998,6 +49965,39 @@ options
 experimental
 .
 symbols_as_weakmap_keys
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
+Experimental
+support
+for
+Uint8Array
+base64
+/
+hex
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+uint8array_base64
 type
 :
 bool
