--- a/taskcluster/kinds/addon/kind.yml
+++ b/taskcluster/kinds/addon/kind.yml
@@ -242,68 +242,14 @@ sparse
 profile
 :
 tps
-optimization
+when
 :
-skip
--
-unless
--
-missing
--
-or
+files
 -
 changed
 :
-#
-index
-path
-where
-task
-should
-be
-found
-(
-if
-missing
-will
-cause
-task
-to
-run
-)
 -
-"
-gecko
-.
-v2
-.
-mozilla
--
-central
-.
-latest
-.
-firefox
-.
-addons
-.
-tps
-"
-#
-file
-paths
-that
-should
-also
-cause
-task
-to
-run
-when
-modified
--
-[
-"
+'
 services
 /
 sync
@@ -316,5 +262,4 @@ tps
 /
 *
 *
-"
-]
+'
