Bug 1920766 - vendor webrtc-sdp 0.3.13 for AV1 support;r=dbaker,supply-chain-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D223390

UltraBlame original commit: 309654444b214530d24290c93b0943d7f7f48fde

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -49264,6 +49264,55 @@ delta
 [
 audits
 .
+webrtc
+-
+sdp
+]
+]
+who
+=
+"
+na
+-
+g
+<
+na
+-
+g
+nostrum
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+0
+.
+3
+.
+11
+-
+>
+0
+.
+3
+.
+13
+"
+[
+[
+audits
+.
 weedle2
 ]
 ]
