Bug 1918637 - disable toolkit/components/extensions/test/mochitest/test_ext_idle.html on Linux debug where it perma fails, r=rpl.
Differential Revision: https://phabricator.services.mozilla.com/D225223

UltraBlame original commit: eb6f9e17a465a5324a1eb8cde34ce271746d1811

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.toml
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.toml
@@ -1583,7 +1583,6 @@ if
 "
 tsan
 "
-]
 #
 Times
 out
@@ -1591,6 +1590,30 @@ on
 TSan
 bug
 1612707
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+debug
+"
+#
+bug
+1918637
+(
+Close
+to
+perma
+fail
+on
+Linux
+debug
+)
+]
 [
 "
 test_ext_inIncognitoContext_window
