Bug 1918731 - Add preference for Atomics.pause proposal; r=dminor
Differential Revision: https://phabricator.services.mozilla.com/D224856

UltraBlame original commit: 70cfa1be45ed8faaad2d126fe5a52a423f711e4f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -50198,6 +50198,38 @@ set_spidermonkey_pref
 :
 startup
 #
+Experimental
+support
+for
+Atomics
+.
+pause
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+atomics_pause
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
 endif
 /
 /
