--- a/toolkit/mozapps/defaultagent/tests/xpcshell/xpcshell.toml
+++ b/toolkit/mozapps/defaultagent/tests/xpcshell/xpcshell.toml
@@ -17,6 +17,20 @@ win
 ]
 [
 "
+test_backgroundtask_defaultagent
+.
+js
+"
+]
+[
+"
+test_default_agent
+.
+js
+"
+]
+[
+"
 test_windows_mutex
 .
 js
