Bug 1923918 - use the experimental CRLite filter channel on Nightly. r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D225261

UltraBlame original commit: 088f5d30ad1f3b208cbf110f2d9c37a5dc3e838d

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -95616,7 +95616,10 @@ all
 "
 =
 >
-filters
+bloom
+-
+filter
+cascades
 that
 contain
 all
@@ -95624,30 +95627,14 @@ revocations
 #
 -
 "
-specified
+experimental
 "
 =
 >
-filters
+clubcards
 that
 contain
-revocations
-with
-specified
-reason
-codes
-#
--
-"
-priority
-"
-=
->
-filters
-that
-contain
-high
-priority
+all
 revocations
 .
 -
@@ -95661,11 +95648,23 @@ crlite_channel
 type
 :
 String
+#
+ifdef
+NIGHTLY_BUILD
 value
 :
 "
-specified
+experimental
 "
+#
+else
+value
+:
+"
+all
+"
+#
+endif
 mirror
 :
 never
