Bug 1913734 - Setup Fission Nimbus Experiment Instrumentation for Android r=android-reviewers,petru,owlish
This patch sets up the Nimbus fission experiment:
* Defines fission.enabled in nimbus.fml.yaml
* Sets fission value based on experiment on GeckoRuntimeSettings builder
* Sets the default WebContentIsolationStrategy of IsolateHighValue for fission

Differential Revision: https://phabricator.services.mozilla.com/D225113

UltraBlame original commit: d063510b858e3f22aaa986bd736ec98e7166d78f

--- a/mobile/android/fenix/app/nimbus.fml.yaml
+++ b/mobile/android/fenix/app/nimbus.fml.yaml
@@ -2910,6 +2910,59 @@ Boolean
 default
 :
 true
+fission
+:
+description
+:
+The
+feature
+that
+controls
+whether
+fission
+is
+enabled
+or
+not
+in
+Gecko
+.
+variables
+:
+enabled
+:
+description
+:
+>
+Whether
+or
+not
+to
+enable
+fission
+.
+Fission
+is
+enabled
+when
+set
+to
+true
+.
+Fission
+is
+disabled
+when
+set
+to
+false
+.
+type
+:
+Boolean
+default
+:
+false
 suggest
 -
 shipped
