Bug 1923187: part 1 - Prepare relevance scoring facilities r=adw,bdk
Differential Revision: https://phabricator.services.mozilla.com/D225140

UltraBlame original commit: a329af8becc7b5d7fe0dce4db7686630ab6f968f

--- a/toolkit/components/contentrelevancy/tests/xpcshell/xpcshell.toml
+++ b/toolkit/components/contentrelevancy/tests/xpcshell/xpcshell.toml
@@ -75,6 +75,30 @@ lineno
 "
 [
 "
+test_InterestVectorBasedScoring
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
+#
+bug
+1886601
+[
+"
 test_Telemetry
 .
 js
