Backed out changeset 088f5d30ad1f (bug 1923918) for causing xpcshell failures in test_crlite_filters.js.
UltraBlame original commit: 8ee86e39d05ba0f9ab29e64807bbdb04092f7a18

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -95616,10 +95616,7 @@ all
 "
 =
 >
-bloom
--
-filter
-cascades
+filters
 that
 contain
 all
@@ -95627,14 +95624,30 @@ revocations
 #
 -
 "
-experimental
+specified
 "
 =
 >
-clubcards
+filters
 that
 contain
-all
+revocations
+with
+specified
+reason
+codes
+#
+-
+"
+priority
+"
+=
+>
+filters
+that
+contain
+high
+priority
 revocations
 .
 -
@@ -95648,23 +95661,11 @@ crlite_channel
 type
 :
 String
-#
-ifdef
-NIGHTLY_BUILD
 value
 :
 "
-experimental
+specified
 "
-#
-else
-value
-:
-"
-all
-"
-#
-endif
 mirror
 :
 never
