Bug 1389229 - Deduplicate urlbar history results that only differ by their URL fragment. r=mak,urlbar-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D222672

UltraBlame original commit: e3c65d4e3de6f29680dde9b084a5dcb9c513398b

--- a/browser/components/urlbar/tests/browser/browser.toml
+++ b/browser/components/urlbar/tests/browser/browser.toml
@@ -1879,6 +1879,24 @@ js
 ]
 [
 "
+browser_same_ref_deduplication
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+dummy_page
+.
+html
+"
+]
+[
+"
 browser_searchFunction
 .
 js
