Bug 1921440 - Define new `dau-reporting` ping and contained metrics r=frank,data-stewards,TravisLong
This change allows us to offer Firefox users more granular choices in data collection.

Differential Revision: https://phabricator.services.mozilla.com/D225200

UltraBlame original commit: e91a6cb50e629e8f84d5c35687835f4d8e043693

--- a/browser/modules/metrics.yaml
+++ b/browser/modules/metrics.yaml
@@ -303,6 +303,24 @@ cgi
 id
 =
 1781578
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_reviews
 :
 -
@@ -363,6 +381,24 @@ id
 1811152
 #
 c5
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_sensitivity
 :
 -
@@ -383,6 +419,10 @@ send_in_pings
 baseline
 -
 metrics
+-
+dau
+-
+reporting
 no_lint
 :
 -
@@ -522,6 +562,24 @@ cgi
 id
 =
 1781578
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_reviews
 :
 -
@@ -582,6 +640,24 @@ id
 1811152
 #
 c5
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_sensitivity
 :
 -
@@ -602,6 +678,10 @@ send_in_pings
 baseline
 -
 metrics
+-
+dau
+-
+reporting
 no_lint
 :
 -
