--- a/toolkit/components/telemetry/metrics.yaml
+++ b/toolkit/components/telemetry/metrics.yaml
@@ -239,6 +239,24 @@ cgi
 id
 =
 1755549
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_reviews
 :
 -
@@ -259,6 +277,24 @@ cgi
 id
 =
 1755549
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1921440
 data_sensitivity
 :
 -
@@ -305,6 +341,12 @@ newtab
 -
 '
 baseline
+'
+-
+'
+dau
+-
+reporting
 '
 profile_group_id
 :
