Bug 1923842 - Android: Define new `dau-reporting` ping r=frank,android-reviewers,kaya
This change allows us to offer Firefox users more granular choices in data collection.

Differential Revision: https://phabricator.services.mozilla.com/D225205

UltraBlame original commit: a82eca9168acaae76c38730d0293d2873c899a31

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -12760,6 +12760,24 @@ fenix
 issues
 /
 960
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -12934,6 +12952,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -15402,6 +15424,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -15440,6 +15466,24 @@ fenix
 issues
 /
 6556
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -24407,6 +24451,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -24427,6 +24475,24 @@ fenix
 issues
 /
 800
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -24647,6 +24713,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -24667,6 +24737,24 @@ fenix
 issues
 /
 800
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -58649,6 +58737,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -58705,6 +58797,24 @@ cgi
 id
 =
 1799049
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -58971,6 +59081,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -59009,6 +59123,24 @@ fenix
 issues
 /
 28010
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
@@ -59185,6 +59317,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -59205,6 +59341,24 @@ fenix
 issues
 /
 6557
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923842
 data_reviews
 :
 -
