Bug 1881556 - Add documentation on the cpuTime metric to raptor documentation r=perftest-reviewers,sparky
Differential Revision: https://phabricator.services.mozilla.com/D223298

UltraBlame original commit: c462beab00af003f4df1cde0c6ae31a6d26086a5

--- a/testing/raptor/raptor/perfdocs/config.yml
+++ b/testing/raptor/raptor/perfdocs/config.yml
@@ -78,6 +78,35 @@ False
 metrics
 :
 "
+cpu
+Time
+"
+:
+aliases
+:
+-
+cpuTime
+description
+:
+>
+Specifies
+cumulative
+CPU
+usage
+in
+milliseconds
+across
+all
+threads
+of
+the
+process
+since
+the
+process
+start
+.
+"
 First
 Paint
 "
