Bug 1923372 [wpt PR 48521] - Update wpt metadata, a=testonly
wpt-pr: 48521
wpt-type: metadata

UltraBlame original commit: ec62c16aa0224b618bb3fc2ccbb620da94fbcb2e

--- a/testing/web-platform/meta/speculation-rules/prefetch/out-of-document-rule-set.https.html.ini
+++ b/testing/web-platform/meta/speculation-rules/prefetch/out-of-document-rule-set.https.html.ini
@@ -306,3 +306,25 @@ InnerListInSpeculationRulesHeader
 expected
 :
 ERROR
+[
+out
+-
+of
+-
+document
+-
+rule
+-
+set
+.
+https
+.
+html
+?
+include
+=
+CSPExemption
+]
+expected
+:
+ERROR
