Bug 1923248 [wpt PR 48513] - Update wpt metadata, a=testonly
wpt-pr: 48513
wpt-type: metadata

UltraBlame original commit: bb4f6f978e35028a09422e185a4254d28579e4cd

--- a/testing/web-platform/meta/webxr/dom-overlay/nested_fullscreen.https.html.ini
+++ b/testing/web-platform/meta/webxr/dom-overlay/nested_fullscreen.https.html.ini
@@ -24,3 +24,27 @@ debug
 OK
 ERROR
 ]
+[
+Check
+XR
+session
+from
+fullscreen
+-
+webgl
+]
+expected
+:
+FAIL
+[
+Check
+XR
+session
+from
+fullscreen
+-
+webgl2
+]
+expected
+:
+FAIL
