--- a/testing/web-platform/meta/css/css-anchor-position/anchor-size-001.html.ini
+++ b/testing/web-platform/meta/css/css-anchor-position/anchor-size-001.html.ini
@@ -132,7 +132,103 @@ FAIL
 [
 .
 target
-14
+15
+]
+expected
+:
+FAIL
+[
+.
+target
+16
+]
+expected
+:
+FAIL
+[
+.
+target
+17
+]
+expected
+:
+FAIL
+[
+.
+target
+18
+]
+expected
+:
+FAIL
+[
+.
+target
+19
+]
+expected
+:
+FAIL
+[
+.
+target
+20
+]
+expected
+:
+FAIL
+[
+.
+target
+21
+]
+expected
+:
+FAIL
+[
+.
+target
+22
+]
+expected
+:
+FAIL
+[
+.
+target
+23
+]
+expected
+:
+FAIL
+[
+.
+target
+25
+]
+expected
+:
+FAIL
+[
+.
+target
+26
+]
+expected
+:
+FAIL
+[
+.
+target
+27
+]
+expected
+:
+FAIL
+[
+.
+target
+28
 ]
 expected
 :
